# simple-binary-parser

./: CMakeLists.txt  rebuild.sh
.github/workflow/: build_and_test.yml
extra1/: main.c  parser_stream  streaming_parser.c  streaming_parser.h
include/: parser.h  sample.h
src/: main.c  parser.c  sample.c
tests/: test_parser.c  test_sample.c
